Remove all favicon files for full replacement

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 
     <!-- News Modal -->
     <div id="news-modal" class="faq-modal" style="display: none;">
-        <div class="faq-modal-content">
+        <div class="faq-modal-content news-modal-wide">
             <button class="faq-close news-close">&times;</button>
             <section id="news" class="news">
         <div class="container">
@@ -747,17 +747,17 @@
                 <div class="news-item">
                     <h3>Tavoitteena tuoda lisää kilpailua alalle</h3>
                     <p class="news-date">Missiomme</p>
-                    <p>Tavoitteemme on tuoda lisää kilpailua alalle tarjoamalla reilua ja läpinäkyvää hinnoittelua. Uskomme, että laadukas ulkomaalaus ei ole ylellisyys, vaan jokaiselle kiinteistönomistajalle kuuluva perusoikeus.</p>
+                    <p>Tavoitteemme on tuoda lisää kilpailua alalle tarjoamalla reilua ja läpinäkyvää hinnoittelua. Laadukas ulkomaalaus ei ole, eikä sitä pitäisi hinnoitella ylellisyytenä.</p>
                 </div>
                 <div class="news-item">
                     <h3>Miten tarjoamme kilpailukykyisen hinnan?</h3>
                     <p class="news-date">Yritysmallimme</p>
-                    <p>Uudenlainen yritysmallimme pohjautuu kevyeen organisaatioon ilman kalliita toimistotiloja tai raskasta hallinnollista taakkaa. Toimimme suorassa yhteydessä asiakkaisiin, mikä vähentää välikäsiä ja turhaa byrokratiaa. Tehokas työskentelytapamme ja tiivis tiimimme mahdollistavat nopean reagoinnin ja kilpailukykyisen hinnoittelun tinkimättä työn laadusta tai ammattitaidosta.</p>
+                    <p>Uudenlainen yritysmallimme pohjautuu kevyeen organisaatioon ilman kalliita toimistotiloja tai raskasta hallinnollista taakkaa. Toimimme suorassa yhteydessä asiakkaisiin, mikä vähentää välikäsiä ja turhaa byrokratiaa. Kokenut maalaustahtimme ja välitön kommunikointi asiakkalta maalarille mahdollistaa nopean reagoinnin ja kilpailukykyisen hinnoittelun tinkimättä työn laadusta tai ammattitaidosta.</p>
                 </div>
                 <div class="news-item">
                     <h3>Joustava tiimimme</h3>
                     <p class="news-date">Kapasiteetti</p>
-                    <p>Tiimimme koko vaihtelee joustavasti 3–6 työntekijän välillä riippuen sesongin kiireestä ja asiakasmäärästä. Tämä mahdollistaa tehokkaan resurssien käytön ja takaa, että jokaiseen projektiin osallistuu riittävästi ammattitaitoisia maalareistamme. Vähemmän kiireisinä aikoina keskitymme pienempiin kohteisiin henkilökohtaisella palvelulla, kun taas sesongin huippujen aikana pystymme vastaamaan myös suurempiin haasteisiin laajemmalla tiimillä.</p>
+                    <p>Toimimme 2–6 työntekijän välillä riippuen montako kohdetta hoidamme yhtaikaisesti. Omakotitalokohde vaatii 2 maalaria, kun isompi taloyhtiö voi vaatia kaikkien tekijöiden yhteistyön. Tämä joustavuus mahdollistaa että voimme joko suorittaa monta keskikokoista urakkaa samaan aikaan, tai sitten yhden suuren projektin nopean ja suunnitelmallisen läpiviennin kerralla.</p>
                 </div>
             </div>
         </div>
