Korjattu kirjoitusvirhe: Maalataako -> Maalaako UKK-osiossa

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                                 <div class="divider-ball"></div>
                             </div>
                         </div>
-                        <p class="slider-description">Timpuri vaihtoi vanhat, kuluneet julkisivulaudat uusiin. Seinä pohjamaalattiin huolellisesti, minkä jälkeen seurasi viimeisen kerroksen maalaus.</p>
+                        <p class="slider-description">Timpuri vaihtoi vanhat, kuluneet julkisivulaudat uusiin. Seinä pohjamaalattiin huolellisesti ja lopuksi maalattiin viimeinen kerros.</p>
                     </div>
                     <div class="carousel-slider-item" data-before="images/maalaus-musta-oljymalaus-ennen.jpeg" data-after="images/maalaus-musta-oljymalaus-jalkeen.jpeg" data-label="Öljymaalaus">
                         <div class="before-after-slider" id="slider-2">
@@ -847,7 +847,7 @@
                 </div>
                 <div class="faq-item">
                     <button class="faq-question">
-                        <span>Maalataako Ulkomaalarit myös taloyhtiöitä?</span>
+                        <span>Maalaako Ulkomaalarit myös taloyhtiöitä?</span>
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
